fix: getThumbnailPath() 각 엔티티에 추가